--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -29,7 +29,8 @@
 	<activity android:name="com.app.anonalarm.AlarmSide" />
 	<activity android:name="com.app.anonalarm.RecordSide" />
 	<activity android:name="com.app.anonalarm.AddAlarm" />
-	<activity android:name="com.app.anonalarm.AlarmReceiver" />
+	<receiver android:name="AlarmReceiver">
+	</receiver>
     </application>
 	
 </manifest>
