--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:targetSdkVersion="17" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.RECORD_AUDIO" />
-
+    <uses-permission android:name="android.permission.INTERNET" />
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -29,7 +30,7 @@
 	<activity android:name="com.app.anonalarm.AlarmSide" />
 	<activity android:name="com.app.anonalarm.RecordSide" />
 	<activity android:name="com.app.anonalarm.AddAlarm" />
-	<receiver android:name="AlarmReceiver">
+	<receiver android:name="com.app.anonalarm.AlarmReceiver">
 	</receiver>
     </application>
 	
