--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        >
         
         <activity
             android:name="com.app.anonalarm.MainActivity"
@@ -33,5 +34,4 @@
 	<receiver android:name="com.app.anonalarm.AlarmReceiver">
 	</receiver>
     </application>
-	
 </manifest>
