--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,6 +10,7 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 	
     <application
         android:allowBackup="true"
@@ -31,6 +32,7 @@
 	<activity android:name="com.app.anonalarm.AlarmSide" />
 	<activity android:name="com.app.anonalarm.RecordSide" />
 	<activity android:name="com.app.anonalarm.AddAlarm" />
+	<activity android:name="com.app.anonalarm.AlarmAlerter" />
 	<receiver android:name="com.app.anonalarm.AlarmReceiver">
 	</receiver>
     </application>
