--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        >
         
         <activity
             android:name="com.app.anonalarm.MainActivity"
@@ -30,8 +31,8 @@
 	<activity android:name="com.app.anonalarm.AlarmSide" />
 	<activity android:name="com.app.anonalarm.RecordSide" />
 	<activity android:name="com.app.anonalarm.AddAlarm" />
+	<activity android:name="com.app.anonalarm.AlarmAlerter" />
 	<receiver android:name="com.app.anonalarm.AlarmReceiver">
 	</receiver>
     </application>
-	
 </manifest>
